# SearchEngine

./: .gitignore  CMakeLists.txt  README.md  config.json  requests.json
data/: answers.json  config.json  doc2.txt  requests.json
includes/: converter_json.h  inverted_index.h  search_server.h
src/: CMakeLists.txt  converter_json.cpp  inverted_index.cpp  main.cpp  search_server.cpp
tests/: CMakeLists.txt  MyTest.cpp
